--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,8 @@ test:
 #
 production:
   <<: *default
-  database: play_the_ground_production
-  username: play_the_ground
-  password: <%= ENV['PLAY_THE_GROUND_DATABASE_PASSWORD'] %>
+  database: <%= ENV['RDS_DB_NAME'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOSTNAME'] %>
+  port: <%= ENV['RDS_PORT'] %>
